--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -354,6 +354,9 @@ en:
         verify_text: 'To verify your account, just follow this link: %{url}'
         verify_link: Verify Account
         thanks: Thanks for joining and have a great day!
+      account_created_email:
+        username: Your username is %{email}.
+        password: Your password is %{password}.
   maintenance:
     window_alert: Maintenance window scheduled for %{date}
   max_concurrent: The maximum number of concurrent sessions allowed has been reached!
