--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -295,8 +295,8 @@ en:
     search:
       start: Start searching...
   landing:
-    about: "%{href} is a simple front-end for your BigBlueButton open-source web conferencing server. You can create your own rooms to host sessions, or join others using a short and convenient link."
-    welcome: Welcome to BigBlueButton.
+    about: "Sage Music Meet is powered by %{href}, is a simple front-end for the BigBlueButton open-source web conferencing. You can take your online music lessons here, create your own rooms to host sessions, join others using a short and convenient link, and record your lessons for future reference."
+    welcome: Welcome to Sage Music Meet.
     video: Watch our tutorial on using Greenlight
     upgrade: Show me how to upgrade to 2.0!
     version: We've released a new version of Greenlight, but your database isn't compatible.
